public class LED extends Components{

    public LED(String name, int outputs) {
        super(name, outputs);
    }

    @Override
    void calc() {

    }
}
