package ue00_Schaltung;

public class FlipFlop {
}
